{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 61,
  "lineage": "fc0bec0c-c2d9-f0b5-004f-125182afa31d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:503577850481:internet-gateway/igw-0e4572a58ae9b8c06",
            "id": "igw-0e4572a58ae9b8c06",
            "owner_id": "503577850481",
            "region": "sa-east-1",
            "tags": {
              "Name": "projeto2-cicd-aws-igw"
            },
            "tags_all": {
              "Name": "projeto2-cicd-aws-igw"
            },
            "vpc_id": "vpc-03b71a2e5ca88c209"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "igw-0e4572a58ae9b8c06",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:loadbalancer/app/projeto2-cicd-aws-alb/f69a4858b19034ab",
            "arn_suffix": "app/projeto2-cicd-aws-alb/f69a4858b19034ab",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "projeto2-cicd-aws-alb-1447311435.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:loadbalancer/app/projeto2-cicd-aws-alb/f69a4858b19034ab",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "projeto2-cicd-aws-alb",
            "preserve_host_header": false,
            "region": "sa-east-1",
            "security_groups": [
              "sg-0648b0cf07cf0b96e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0183a7da8ee7489ff"
              },
              {
                "subnet_id": "subnet-09ae7bf959191807f"
              }
            ],
            "subnets": [
              "subnet-0183a7da8ee7489ff",
              "subnet-09ae7bf959191807f"
            ],
            "vpc_id": "vpc-03b71a2e5ca88c209",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:loadbalancer/app/projeto2-cicd-aws-alb/f69a4858b19034ab"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:listener/app/projeto2-cicd-aws-alb/f69a4858b19034ab/5ad9967d854d227d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:targetgroup/projeto2-cicd-aws-tg/dd29d1aeb66195f5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:listener/app/projeto2-cicd-aws-alb/f69a4858b19034ab/5ad9967d854d227d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:loadbalancer/app/projeto2-cicd-aws-alb/f69a4858b19034ab",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "sa-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:listener/app/projeto2-cicd-aws-alb/f69a4858b19034ab/5ad9967d854d227d"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:targetgroup/projeto2-cicd-aws-tg/dd29d1aeb66195f5",
            "arn_suffix": "targetgroup/projeto2-cicd-aws-tg/dd29d1aeb66195f5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:targetgroup/projeto2-cicd-aws-tg/dd29d1aeb66195f5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "projeto2-cicd-aws-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "sa-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03b71a2e5ca88c209"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:503577850481:targetgroup/projeto2-cicd-aws-tg/dd29d1aeb66195f5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e4572a58ae9b8c06",
            "id": "r-rtb-08a2297f645142a911080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "sa-east-1",
            "route_table_id": "rtb-08a2297f645142a91",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "sa-east-1",
            "route_table_id": "rtb-08a2297f645142a91"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:503577850481:route-table/rtb-08a2297f645142a91",
            "id": "rtb-08a2297f645142a91",
            "owner_id": "503577850481",
            "propagating_vgws": [],
            "region": "sa-east-1",
            "route": [],
            "tags": {
              "Name": "projeto2-cicd-aws-public-rt"
            },
            "tags_all": {
              "Name": "projeto2-cicd-aws-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b71a2e5ca88c209"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "rtb-08a2297f645142a91",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce08fc0c606ef133",
            "region": "sa-east-1",
            "route_table_id": "rtb-08a2297f645142a91",
            "subnet_id": "subnet-0183a7da8ee7489ff"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "rtbassoc-0ce08fc0c606ef133",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0789c1220ed6a4077",
            "region": "sa-east-1",
            "route_table_id": "rtb-08a2297f645142a91",
            "subnet_id": "subnet-09ae7bf959191807f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "rtbassoc-0789c1220ed6a4077",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:503577850481:security-group/sg-0648b0cf07cf0b96e",
            "description": "Permite HTTP publico",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0648b0cf07cf0b96e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "projeto2-cicd-aws-alb-sg",
            "name_prefix": "",
            "owner_id": "503577850481",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b71a2e5ca88c209"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "sg-0648b0cf07cf0b96e",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:503577850481:security-group/sg-0ad4ffaafae0fcde1",
            "description": "Permite trafego do ALB para o ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad4ffaafae0fcde1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0648b0cf07cf0b96e"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "projeto2-cicd-aws-ecs-sg",
            "name_prefix": "",
            "owner_id": "503577850481",
            "region": "sa-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b71a2e5ca88c209"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "sg-0ad4ffaafae0fcde1",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:503577850481:subnet/subnet-0183a7da8ee7489ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0183a7da8ee7489ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503577850481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "projeto2-cicd-aws-public-a"
            },
            "tags_all": {
              "Name": "projeto2-cicd-aws-public-a"
            },
            "vpc_id": "vpc-03b71a2e5ca88c209"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "subnet-0183a7da8ee7489ff",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:503577850481:subnet/subnet-09ae7bf959191807f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ae7bf959191807f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503577850481",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "sa-east-1",
            "tags": {
              "Name": "projeto2-cicd-aws-public-b"
            },
            "tags_all": {
              "Name": "projeto2-cicd-aws-public-b"
            },
            "vpc_id": "vpc-03b71a2e5ca88c209"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "subnet-09ae7bf959191807f",
            "region": "sa-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:503577850481:vpc/vpc-03b71a2e5ca88c209",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_route_table_id": "rtb-0255f8dbf9c5acfa3",
            "default_security_group_id": "sg-09e20250de957c285",
            "dhcp_options_id": "dopt-09dccccc485dc9f8a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b71a2e5ca88c209",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0255f8dbf9c5acfa3",
            "owner_id": "503577850481",
            "region": "sa-east-1",
            "tags": {
              "Name": "projeto2-cicd-aws-vpc"
            },
            "tags_all": {
              "Name": "projeto2-cicd-aws-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "503577850481",
            "id": "vpc-03b71a2e5ca88c209",
            "region": "sa-east-1"
          }
        }
      ]
    }
  ]
}